# NESEmulator

./: CMakeLists.txt  CMakePresets.json
src/: emulator.cpp  emulator.h  main.cpp
src/emulation/: controller.cpp  controller.h  cpu.cpp  cpu.h  memorybus.cpp  memorybus.h  romreader.cpp  romreader.h
src/emulation/graphics/: ppu.cpp  ppu.h  renderer.cpp  renderer.h
src/emulation/testing/: cputest.cpp  cputest.h
src/monitor/: disassembler.cpp  disassembler.h  window.cpp  window.h
src/utils/: excepthandler.cpp  excepthandler.h  logger.cpp  logger.h
